--- a/MvcMovie/Views/Books/Edit.cshtml
+++ b/MvcMovie/Views/Books/Edit.cshtml
@@ -30,7 +30,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
+                @* <input asp-for="Genre" class="form-control" /> *@
+                @Html.DropDownList("Genre",
+                         ViewBag.BookGenres,
+                         "Select Genre",
+                         new { @class = "form-control" })
                 <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
